--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
   "dependencies": {
     "express": "^4.21.2"
   },
-    
   "devDependencies": {
+    "@eslint/js": "^9.22.0",
     "@types/express": "^4.17.21",
+    "eslint": "^9.22.0",
+    "globals": "^16.0.0",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.8.2"
-  }    
-  
+    "typescript": "^5.8.2",
+    "typescript-eslint": "^8.26.1"
+  }
 }
