--- a/package.json
+++ b/package.json
@@ -5,8 +5,13 @@
   "author": "Felipe Chagas",
   "license": "MIT",
   "private": false,
+  "scripts": {
+    "start": "ts-node-dev ./src/index.ts"
+  },
   "dependencies": {
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "http-status-code": "^2.1.0",
+    "http-status-codes": "^2.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
