--- a/package.json
+++ b/package.json
@@ -6,20 +6,26 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "start": "ts-node-dev ./src/index.ts"
+    "start": "ts-node-dev ./src/index.ts",
+    "test": "jest"
   },
   "dependencies": {
+    "@types/jest": "^29.5.14",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "http-status-code": "^2.1.0",
     "http-status-codes": "^2.3.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.3.1",
     "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
     "@types/express": "^4.17.21",
+    "@types/supertest": "^6.0.3",
     "eslint": "^9.22.0",
     "globals": "^16.0.0",
+    "supertest": "^7.1.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.26.1"
