--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "http-status-code": "^2.1.0",
     "http-status-codes": "^2.3.0",
     "jest": "^29.7.0",
+    "knex": "^3.1.0",
     "ts-jest": "^29.3.1",
     "yup": "^1.6.1"
   },
@@ -25,6 +26,7 @@
     "@types/supertest": "^6.0.3",
     "eslint": "^9.22.0",
     "globals": "^16.0.0",
+    "sqlite": "^5.1.1",
     "supertest": "^7.1.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.2",
