--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "private": false,
   "scripts": {
     "start": "ts-node-dev ./src/index.ts",
-    "test": "jest"
+    "test": "jest",
+     "knex": "knex --knexfile knexfile.ts"
   },
   "dependencies": {
     "@types/jest": "^29.5.14",
@@ -26,7 +27,7 @@
     "@types/supertest": "^6.0.3",
     "eslint": "^9.22.0",
     "globals": "^16.0.0",
-    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7",
     "supertest": "^7.1.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.2",
