--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
   "scripts": {
     "start": "ts-node-dev ./src/index.ts",
     "test": "jest",
-     "knex": "knex --knexfile knexfile.ts"
+    "knex": "knex --knexfile knexfile.ts"
   },
   "dependencies": {
-    "@types/jest": "^29.5.14",
+    "bcryptjs": "^3.0.2",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "http-status-code": "^2.1.0",
@@ -25,6 +25,8 @@
     "@eslint/js": "^9.22.0",
     "@types/express": "^4.17.21",
     "@types/supertest": "^6.0.3",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jest": "^29.5.14",
     "eslint": "^9.22.0",
     "globals": "^16.0.0",
     "sqlite3": "^5.1.7",
