--- a/package.json
+++ b/package.json
@@ -17,16 +17,18 @@
     "http-status-code": "^2.1.0",
     "http-status-codes": "^2.3.0",
     "jest": "^29.7.0",
+    "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "ts-jest": "^29.3.1",
     "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
-    "@types/express": "^4.17.21",
-    "@types/supertest": "^6.0.3",
     "@types/bcryptjs": "^2.4.6",
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.14",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/supertest": "^6.0.3",
     "eslint": "^9.22.0",
     "globals": "^16.0.0",
     "sqlite3": "^5.1.7",
