--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
+    "pg": "^8.16.0",
     "ts-jest": "^29.3.1",
     "yup": "^1.6.1"
   },
@@ -28,6 +29,7 @@
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/pg": "^8.15.4",
     "@types/supertest": "^6.0.3",
     "eslint": "^9.22.0",
     "globals": "^16.0.0",
